<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="157dp"
        android:text="@string/Task3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="306dp"
        android:layout_height="82dp"
        android:layout_marginTop="88dp"
        android:text="@string/Problem3"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="279dp"
        android:text="@string/Input3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="212dp"
        android:layout_height="43dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:hint="@string/hint3"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="109dp"
        android:layout_height="24dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="249dp"
        android:text="@string/Solution3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="50dp"
        android:onClick="Solve3"
        android:text="@string/Solve3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="221dp"
        android:text="@string/PrevTask"
        android:onClick="GoToTask2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="16dp"
        android:text="@string/NextTask"
        android:onClick="GoToTask4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>