<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Task2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:onClick="Solve2"
        android:text="@string/Find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/button4"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="221dp"
        android:onClick="GoToTask1"
        android:text="@string/PrevTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="16dp"
        android:onClick="GoToTask3"
        android:text="@string/NextTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="268dp"
        android:layout_height="76dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="1dp"
        android:text="@string/Problem"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="327dp"
        android:layout_height="180dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/MultiLine"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>