<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="164dp"
        android:text="@string/_4"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="291dp"
        android:layout_height="71dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="59dp"
        android:text="@string/f_x_y_x_y_10_20"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:onClick="Solve4"
        android:text="@string/Solve4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="398dp"
        android:layout_marginEnd="45dp"
        android:hint="@string/Hint_layout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="199dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/equation" />

    <Button
        android:id="@+id/button10"
        android:layout_width="352dp"
        android:layout_height="53dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:onClick="GoToTask3"
        android:text="@string/Prev3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button9" />

</androidx.constraintlayout.widget.ConstraintLayout>